--- a/.gitlab-ci.yaml
+++ b/.gitlab-ci.yaml
@@ -852,3 +852,17 @@ operation_tests:
     - *run-pytest
   tags:
     - public-runner-docker
+
+comment_cashout_tests:
+  stage: test
+  extends: .test_tools_based
+  variables:
+    PYTEST_NUMBER_OF_PROCESSES: 1
+    PYTEST_TIMEOUT_MINUTES: 30
+    JUNIT_REPORT: tests/functional/python_tests/comment_cashout_tests/report.xml
+  script:
+    - cd tests/functional/python_tests/comment_cashout_tests
+    - *run-pytest
+  allow_failure: true
+  tags:
+    - public-runner-docker
