Add `wasm_beekeeper` unit test

--- a/programs/beekeeper/beekeeper_wasm/beekeeper_wasm_core/CMakeLists.txt
+++ b/programs/beekeeper/beekeeper_wasm/beekeeper_wasm_core/CMakeLists.txt
@@ -1,5 +1,4 @@
 file(GLOB HEADERS
-      "${CMAKE_CURRENT_SOURCE_DIR}/../beekeeper_wasm_app_api/include/beekeeper_wasm_app_api/*.hpp"
       "${CMAKE_CURRENT_SOURCE_DIR}/../../core/include/beekeeper_wasm_core/*.hpp"
     )
 
@@ -8,8 +7,8 @@ add_subdirectory( ${CMAKE_CURRENT_SOURCE_DIR}/../../../../libraries/fc_minimal b
 add_subdirectory( ${CMAKE_CURRENT_SOURCE_DIR}/../../../../libraries/protocol_minimal build_protocol_minimal )
 
 ADD_LIBRARY( beekeeper_wasm_core STATIC
-                      ../beekeeper_wasm_app_api/beekeeper_wasm_app.cpp
-                      ../beekeeper_wasm_app_api/beekeeper_wasm_api.cpp
+                      ../../core/beekeeper_wasm_app.cpp
+                      ../../core/beekeeper_wasm_api.cpp
                       ../../core/beekeeper_wallet.cpp
                       ../../core/beekeeper_wallet_manager.cpp
                       ../../core/token_generator.cpp
@@ -23,7 +22,6 @@ ADD_LIBRARY( beekeeper_wasm_core STATIC
 )
 
 set( INCLUDES
-      ${CMAKE_CURRENT_SOURCE_DIR}/../beekeeper_wasm_app_api/include
       ${CMAKE_CURRENT_SOURCE_DIR}/../../core/include
     )
 
