--- a/libraries/fc/CMakeLists.txt
+++ b/libraries/fc/CMakeLists.txt
@@ -449,11 +449,11 @@ TARGET_LINK_LIBRARIES( fc_core PUBLIC CommonBuildOptions )
 
 ADD_LIBRARY( SHARED_BOOST INTERFACE )
 SET_TARGET_PROPERTIES( SHARED_BOOST PROPERTIES POSITION_INDEPENDENT_CODE ON )
-ADD_TARGET_BOOST_LIBRARIES( SHARED_BOOST )
+ADD_TARGET_BOOST_LIBRARIES( SHARED_BOOST "${BOOST_COMPONENTS}" )
 
 ADD_LIBRARY( STATIC_BOOST INTERFACE )
 SET_TARGET_PROPERTIES( STATIC_BOOST PROPERTIES POSITION_INDEPENDENT_CODE OFF )
-ADD_TARGET_BOOST_LIBRARIES( STATIC_BOOST )
+ADD_TARGET_BOOST_LIBRARIES( STATIC_BOOST "${BOOST_COMPONENTS}" )
 
 ADD_LIBRARY ( SHARED_OPENSSL INTERFACE )
 ADD_TARGET_OPENSSL_LIBRARIES (SHARED_OPENSSL FALSE)
