Move std out into a separate file

--- a/libraries/fc/CMakeLists.txt
+++ b/libraries/fc/CMakeLists.txt
@@ -163,8 +163,8 @@ set( fc_sources
      src/shared_ptr.cpp
      src/time.cpp
      src/utf8.cpp
-     src/io/stdio_impl.cpp
      src/io/stdio_in.cpp
+     src/io/stdio_out.cpp
      src/io/iostream.cpp
      src/io/datastream.cpp
      src/io/buffered_iostream.cpp
