beekeeper_wasm targets have explicitly set output extensions (to .mjs for regular package and .js for TS generation target) to eliminate ES6 module detection problems in NodeJS environment

--- a/programs/beekeeper/beekeeper_wasm/CMakeLists.txt
+++ b/programs/beekeeper/beekeeper_wasm/CMakeLists.txt
@@ -7,6 +7,7 @@ set( CMAKE_CXX_STANDARD_REQUIRED ON )
 
 set( CMAKE_C_STANDARD 99 )
 set( CMAKE_C_STANDARD_REQUIRED ON )
+set( CMAKE_EXECUTABLE_SUFFIX "" )
 
 #SET( CMAKE_VERBOSE_MAKEFILE ON )
 
@@ -20,7 +21,7 @@ target_compile_options( beekeeper_wasm PUBLIC -fexceptions )
 target_link_libraries( beekeeper_wasm PUBLIC embind beekeeper_wasm_core idbfs.js )
 # -sFORCE_FILESYSTEM=1 -sMODULARIZE=1 -sFILESYSTEM=1 
 target_link_options( beekeeper_wasm PUBLIC -fexceptions -sMODULARIZE=1 -sEXPORT_ES6=1 )
-
+set_target_properties( beekeeper_wasm PROPERTIES OUTPUT_NAME beekeeper_wasm.mjs )
 
 # Helper target, just to perform TypeScript wrapper generation
 ADD_EXECUTABLE( beekeeper_ts_gen main.cpp )
@@ -29,3 +30,4 @@ target_compile_options( beekeeper_ts_gen PUBLIC -fexceptions )
 target_link_libraries( beekeeper_ts_gen PUBLIC embind beekeeper_wasm_core idbfs.js )
 
 target_link_options( beekeeper_ts_gen PUBLIC -fexceptions --embind-emit-tsd ${CMAKE_CURRENT_BINARY_DIR}/beekeeper.d.ts )
+set_target_properties( beekeeper_ts_gen PROPERTIES OUTPUT_NAME beekeeper_ts_gen.js )
