Use pytest marks to split `fork tests` into 3 groups

--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -12,3 +12,6 @@ markers =
     replayed_node
     decorated_with_run_for
     enable_plugins
+    fork_tests_group_1
+    fork_tests_group_2
+    fork_tests_group_3
